--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "quiz api that contain users and quiz data and manage the hole requests",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Debbache Ala Eddine",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.2",
